# webserv

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  client  error.cpp  gnl_utils.c  header.h  itressa.h  main.cpp  pfile.h  server.cpp  webserv  wpersimm.h
YoupiBanane/: youpi.bad_extension
cfg/: ConfigExample.ws  TesterConfig.ws  geoCin.ws
client.dSYM/Contents/Resources/DWARF/: client
clientf/: .main.cpp.swp  Delete.cpp  Get.cpp  Makefile  Post.cpp  Put.cpp  get  main.cpp  post  put
content/: cgi.sh  delete.html  error_template.html  hack.html  index.html  sed.sh
content/GeoCin/: basic.html  basic.php  index.php
content/GeoCin/arhive/: blog.html  classes.html  contact.html  elements.html  index.html
content/GeoCin/js/: about.js  contact.js  custom.js  elements.js
content/GeoCin/pages/: about.html  blog.html  classes.html  contact.html  elements.html  index.html
content/GeoCin/styles/: about.css  about_responsive.css  blog.css  blog_responsive.css  classes.css  classes_responsive.css  contact.css  contact_responsive.css  elements.css  elements_responsive.css  main_styles.css  responsive.css
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_doublecpy.c  ft_doublefree.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  (+11 more)
serverf/: main.cpp
source/: .loop.cpp.swp  Number.hpp  URI.cpp  URI.hpp  add.cpp  cgi_path.cpp  communication_with_clients.cpp  config.cpp  config.hpp  datetime.cpp  default_config.cpp  erase.cpp  error.cpp  file_available.cpp  find.cpp  ft_doublecpy.cpp  ft_doublefree.cpp  get_http_line.cpp  get_next_line.cpp  get_next_line_utils.cpp  header.cpp  header.hpp  init.cpp  loop.cpp  parse_request.cpp  responce.cpp  route.cpp  route.hpp  send_protected.cpp  server.cpp  server.hpp  split_buffer.cpp  t_config.cpp  t_config.hpp  template.hpp  templates.cpp  tests.cpp  trim.cpp  update_descriptors.cpp
source/config/: Interpreter.cpp  Interpreter.hpp  Lexer.cpp  Lexer.hpp  Node.cpp  Node.hpp  ParseResult.cpp  ParseResult.hpp  Parser.cpp  Parser.hpp  Position.cpp  Position.hpp  Token.cpp  Token.hpp  Validator.cpp  Validator.hpp  main.cpp  parse.cpp
source/config/node/: ANode.cpp  ANode.hpp  ConfigNode.cpp  ConfigNode.hpp  ErrorNode.cpp  ErrorNode.hpp  IdentifierNode.cpp  IdentifierNode.hpp  InvalidSyntaxErrorNode.cpp  InvalidSyntaxErrorNode.hpp  InvalidValueErrorNode.cpp  InvalidValueErrorNode.hpp  ParamNode.cpp  ParamNode.hpp  RouteNode.cpp  RouteNode.hpp  ServerNode.cpp  ServerNode.hpp
webserv.dSYM/Contents/Resources/DWARF/: webserv
